RESOLVED FIXED277813
REGRESSION(281966@main): Several fast/dom/HTMLAnchorElement tests are crashing
https://bugs.webkit.org/show_bug.cgi?id=277813
Summary REGRESSION(281966@main): Several fast/dom/HTMLAnchorElement tests are crashing
pascoe@apple.com
Reported 2024-08-08 11:04:19 PDT
I need to fix the test infrastructure for these on GTK. Using this bug to track.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-08 11:12:01 PDT
pascoe@apple.com
Comment 2 2024-08-08 11:16:12 PDT
EWS
Comment 3 2024-08-08 11:18:41 PDT
Committed 282001@main (b071b421f24b): <https://commits.webkit.org/282001@main> Reviewed commits have been landed. Closing PR #31901 and removing active labels.
pascoe@apple.com
Comment 4 2024-08-08 11:19:09 PDT
Keeping open
Diego Pino
Comment 5 2024-08-15 09:11:37 PDT
This is a regression introduced in 281966@main. I think this information should be part of the bug title, for tracking purposes. In the corresponding PR (https://github.com/WebKit/WebKit/pull/30459), last time EWS GTK-WK2 ran it reported 11 tests were crashing: https://ews-build.webkit.org/#/builders/1/builds/57033 fast/dom/HTMLAnchorElement/anchor-file-blob-convert-to-download-async-delegate.html fast/dom/HTMLAnchorElement/anchor-file-blob-convert-to-download.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-blank-base-target-popup-not-allowed.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-blank-target-popup-not-allowed.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-blank-target.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-backslash.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-doublequote.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-slashes.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-unicode.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-no-extension.html IMHO this is not the proper way of handling layout-tests regressions. First of all, PRs that introduce layout tests regression are not supposed to land. That's why we have EWS bots that run layout-tests (GTK-WK2, WPE-WK2, etc). In case you cannot figure out a test regression in another platform, ask someone from WebKitGTK for help (maybe you already did). Then, I think the tests regressions should have been gardened as Crash, not Skip. If a test is marked as Skip, it won't be run by the post-commit layout-test bot. OTOH, if the test is marked as Crash the test(s) is still run. If eventually a commit that fixes the test(s) lands, it will be reported by the post-commit layout-test as "Expected to crash, but passed". In any case, I think the PR should not have landed if it caused tests regressions on tests that were already passing on WebKitGTK. https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=fast%2Fdom%2FHTMLAnchorElement%2Fanchor-file-blob-convert-to-download.html&test=fast%2Fdom%2FHTMLAnchorElement%2Fanchor-file-blob-convert-to-download-async-delegate.html&platform=GTK&platform=WPE&platform=linux&platform=mac It would have been different if these tests were new tests. Another issue was that the same bug id was used for the gardening commit and for the tests in the TestExpectations file. That's why when the gardening commit landed, this bug was closed (and later reopened). Gardening commits do not require to file a new bug ticket. Also, for issues related to WebKitGTK consider ccing 'bugs-noreply@webkitgtk.org'.
EWS
Comment 6 2024-08-16 12:02:52 PDT
Committed 282361@main (3fc25c74fd8f): <https://commits.webkit.org/282361@main> Reviewed commits have been landed. Closing PR #32263 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.