Fix AllowTestOnlyIPC on the GTK port and clean up other ports rdar://133475043 https://bugs.webkit.org/show_bug.cgi?id=277813

Reviewed by Charlie Wolfe.

The cocoa and windows ports currently manually set this value when resetting
preferences, but because it's in platform code, it does not get set on the GTK
port. This causes tests that rely on AllowTestOnlyIPC to fail. This patch fixes
that by setting it when calling TestController's resetPreferencesToConsistentValues.

* LayoutTests/platform/glib/TestExpectations:
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetPreferencesToConsistentValues):
* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::platformCreateWebView):

Canonical link: https://commits.webkit.org/282361@main